--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,9 @@ dependencies = [
     "djangorestframework (>=3.16.1,<4.0.0)",
     "django-filter (>=25.2,<26.0)",
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
-    "coverage (>=7.12.0,<8.0.0)"
+    "coverage (>=7.12.0,<8.0.0)",
+    "drf-spectacular (>=0.29.0,<0.30.0)",
+    "stripe (>=14.0.1,<15.0.0)"
 ]
 
 
