--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,10 @@ dependencies = [
     "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
     "coverage (>=7.12.0,<8.0.0)",
     "drf-spectacular (>=0.29.0,<0.30.0)",
-    "stripe (>=14.0.1,<15.0.0)"
+    "stripe (>=14.0.1,<15.0.0)",
+    "celery (>=5.6.0,<6.0.0)",
+    "eventlet (>=0.40.4,<0.41.0)",
+    "django-mail-templated (>=2.6.5,<3.0.0)"
 ]
 
 
