--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,9 @@ DATABASE_HOST=localhost
 DATABASE_PORT=5432
 SECRET_KEY =
 STRIPE_SECRET_KEY=
-STRIPE_PUBLISHABLE_KEY='
+STRIPE_PUBLISHABLE_KEY=
+
+EMAIL_HOST_PASSWORD=
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_HOST_USER=
