--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,10 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_DB: ${POSTGRES_DB}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      DATABASE_USER: ${POSTGRES_USER}
+      DATABASE_NAME: ${POSTGRES_DB}
+
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
       interval: 10s
@@ -40,19 +41,7 @@ services:
     depends_on:
       - db
       - redis
-    environment:
-      DJANGO_SECRET_KEY: ${SECRET_KEY}
-      DJANGO_DEBUG: ${DEBUG}
-      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
-      DJANGO_DATABASE_NAME: ${NAME}
-      DJANGO_DATABASE_USER: ${USER}
-      DJANGO_DATABASE_PASSWORD: ${PASSWORD}
-      DJANGO_DATABASE_HOST: db
-      DJANGO_DATABASE_PORT: 5432
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      CELERY_BROKER_URL: ${CELERY_BROKER_URL}
-      CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
+
     healthcheck:
       test: ["CMD-SHELL", "curl --fail http://localhost:8000/health/ || exit 1"]
       interval: 30s
@@ -66,19 +55,6 @@ services:
     depends_on:
       - redis
       - backend
-    environment:
-      DJANGO_SECRET_KEY: ${SECRET_KEY}
-      DJANGO_DEBUG: ${DEBUG}
-      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
-      DJANGO_DATABASE_NAME: ${NAME}
-      DJANGO_DATABASE_USER: ${USER}
-      DJANGO_DATABASE_PASSWORD: ${PASSWORD}
-      DJANGO_DATABASE_HOST: ${HOST}
-      DJANGO_DATABASE_PORT: 5432
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      CELERY_BROKER_URL: ${CELERY_BROKER_URL}
-      CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
       healthcheck:
         test: [ "CMD-SHELL", "celery -Acore status" ]
         interval: 30s
@@ -93,19 +69,6 @@ services:
     depends_on:
       - redis
       - backend
-    environment:
-      DJANGO_SECRET_KEY: ${DJANGO_SECRET_KEY}
-      DJANGO_DEBUG: ${DEBUG}
-      DJANGO_ALLOWED_HOSTS: ${DJANGO_ALLOWED_HOSTS}
-      DJANGO_DATABASE_NAME: ${DJANGO_DATABASE_NAME}
-      DJANGO_DATABASE_USER: ${DJANGO_DATABASE_USER}
-      DJANGO_DATABASE_PASSWORD: ${DJANGO_DATABASE_PASSWORD}
-      DJANGO_DATABASE_HOST: ${HOST}
-      DJANGO_DATABASE_PORT: 5432
-      REDIS_HOST: redis
-      REDIS_PORT: 6379
-      CELERY_BROKER_URL: ${CELERY_BROKER_URL}
-      CELERY_RESULT_BACKEND: ${CELERY_RESULT_BACKEND}
 
   nginx:
     image: nginx:latest
