--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,9 +6,9 @@ services:
     ports:
       - "5432:5432"
     environment:
-      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
-      DATABASE_USER: ${POSTGRES_USER}
-      DATABASE_NAME: ${POSTGRES_DB}
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
+      POSTGRES_USER: ${DATABASE_USER}
+      POSTGRES_DB: ${DATABASE_NAME}
 
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
@@ -55,11 +55,11 @@ services:
     depends_on:
       - redis
       - backend
-      healthcheck:
-        test: [ "CMD-SHELL", "celery -Acore status" ]
-        interval: 30s
-        timeout: 10s
-        retries: 5
+    healthcheck:
+      test: [ "CMD-SHELL", "celery -Acore status" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
 
   celery-beat:
     build: .
