--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python 3.13
+      - name: Set up Python
         uses: actions/setup-python@v3
         with:
-          python-version: 3.12
+          python-version: 3.13
       - name: Install Poetry
         run: |
           curl -sSL https://install.python-poetry.org | python -
