--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,11 +19,9 @@ jobs:
           poetry config virtualenvs.create false
       - name: Install Dependencies and Run Tests
         run: |
-          poetry install --no-interaction --no-ansi
+          poetry install --no-root
           poetry run python manage.py test  # Запуск тестов с помощью Poetry
-      - name: Build Static
-        run: |
-          poetry run python manage.py collectstatic --noinput  # Собираем статику с помощью Poetry
+      
 
   deploy:
     needs: test
